--- a/public/labs/a3/index.html
+++ b/public/labs/a3/index.html
@@ -19,7 +19,7 @@
           rel="stylesheet"/>
 </head>
 <h3>Style tag</h3>
-<p>
+<p id="id-try">
     A slightly better way to configure look and feel
     is to declare CSS rules in the STYLE tag in the
     header and then refer to the tag by their name,
@@ -27,7 +27,7 @@
     rule referring to the P tags
 </p>
 <h3>Link tag</h3>
-<p>
+<p id="id-try">
     The best way to apply CSS rules is to declare
     them in a separate CSS file and load it with
     the LINK tag. Always use this method.
