--- a/public/tuiter/explore/explore-5.html
+++ b/public/tuiter/explore/explore-5.html
@@ -72,9 +72,9 @@
     </div>
 
     <div class="col-xxl-6 col-xl-6 col-lg-6 col-md-10 col-sm-10 col-12 wd-bg-main">
-        <div class="row">
-            <div class="col-xxl-9 col-xl-9 col-lg-9 col-md-9 col-sm-9 col-9 mr-2 mb-3 align-items-center wd-rounded-corners-all-around wd-search-border wd-gray-and-white">
-                <div class="row">
+        <div class="row" style="width: 100%">
+            <div class="col-xxl-9 col-xl-9 col-lg-9 col-md-9 col-sm-9 col-9 mr-2 mb-3 wd-bg-lg align-items-center wd-rounded-corners-all-around wd-search-border wd-gray-and-white">
+                <div class="row" style="width: 100%">
                     <div class="align-items-center col-xxl-1 col-xl-1 col-lg-1 col-md-1 col-sm-1 col-1">
                         <i class="fa fa-search wd-trans align-content-center" style="color: dimgray" id="basic-addon1"></i>
                     </div>
@@ -94,16 +94,16 @@
             <a class="col-xxl-2 col-xl-2 col lg-2 col-md-2 col-sm-2 d-none d-md-block wd-no-underline wd-dark-gray" href="entertainment.html"><b>Entertainment</b></a>
         </div>
         <br/>
-        <div class="text-on-image" style="background-image: url(https://cdn.bignewsnetwork.com/cus1675738874062.jpg)">
+        <div class="text-on-image" style="background-image: url(https://cdn.bignewsnetwork.com/cus1675738874062.jpg); width: 100%">
             <div class="texty">
                 <h3>SpaceX's Starship</h3>
             </div>
         </div>
 
         <br/>
-
+        <div class="col wd-border-light p-2">
         <div class="row">
-            <div class="col-xxl-8 col-xl-8 col-lg-8 col-md-8 col-sm-8 col-8">
+            <div class="col-xxl-10 col-xl-10 col-lg-10 col-md-10 col-sm-10 col-10">
                 <p class="wd-active-col mt-0 mb-0">Web Development</p>
                 <div class="wd-neg-mar-top-1 d-flex align-items-center mb-0">
                     <p class="mt-1"><b>ReactJS</b></p>
@@ -113,14 +113,14 @@
                 <p class="wd-neg-mar-top mb-0"><b>ReactJS is a component based front end library that makes it very easy to build Single Page Applications or SPAs</b></p>
             </div>
             <div class="col-xxl-1 col-xl-1 col-lg-1 col-md-1 col-sm-1 col-1">
-                <img class="wd-smol_pics" src="../../images/reactjs.jpg">
+                <img class="mt-1 wd-smol_pics" src="../../images/reactjs.jpg">
             </div>
+
         </div>
-        <hr class="mb-0" style="width: 82%">
         <br/>
 
         <div class="row">
-            <div class="col-xxl-8 col-xl-8 col-lg-8 col-md-8 col-sm-8 col-8">
+            <div class="col-xxl-10 col-xl-10 col-lg-10 col-md-10 col-sm-10 col-10">
                 <div class="d-flex align-items-center wd-neg-mar-top-1 mb-0">
                     <p class=""><b>JavaScript</b></p>
                     <i class="fa fa-check-circle mb-2 ms-1"></i>
@@ -133,11 +133,10 @@
                 <img class="wd-smol_pics" src="../../images/js.jpg">
             </div>
         </div>
-        <hr class="mb-0" style="width: 82%">
         <br/>
 
         <div class="row">
-            <div class="col-xxl-8 col-xl-8 col-lg-8 col-md-8 col-sm-8 col-8">
+            <div class="col-xxl-10 col-xl-10 col-lg-10 col-md-10 col-sm-10 col-10">
                 <p class="wd-active-col mt-0 mb-0">Web Development</p>
                 <div class="wd-neg-mar-top-1 d-flex align-items-center mb-0">
                     <p class="mt-1"><b>jQuery</b></p>
@@ -148,12 +147,11 @@
                 <img class="wd-smol_pics" src="../../images/jq.jpg">
             </div>
         </div>
-        <hr class="mb-0"
-            style="width: 82%">
+
         <br/>
 
         <div class="row">
-            <div class="col-xxl-8 col-xl-8 col-lg-8 col-md-8 col-sm-8 col-8">
+            <div class="col-xxl-10 col-xl-10 col-lg-10 col-md-10 col-sm-10 col-10">
                 <p class="wd-active-col mt-0 mb-0">Web Development</p>
                 <div class="wd-neg-mar-top-1 d-flex align-items-center mb-0">
                     <p class="mt-1"><b>NodeJS</b></p>
@@ -166,14 +164,13 @@
                 <img class="wd-smol_pics" src="../../images/nodejs.png">
             </div>
         </div>
-        <hr class="mb-0" style="width: 82%">
-
+</div>
     </div>
 
-    <div class="d-none d-lg-block col-xxl-3 col-xl-3 col-lg-3 wd-bg-right">
-        <div class="col ws-0">
+    <div class="wd-bg-lg d-none d-lg-block col-xxl-3 col-xl-3 col-lg-3 wd-bg-right">
+        <div class="col ws-0 wd-bg-lg wd-round-bor">
             <div class="list-group">
-                <text class="mb-2"><b>Who to follow</b></text>
+                <text class="mb-2 ms-1"><b>Who to follow</b></text>
 
                 <div class="row">
                     <img class="col-xxl-2 col-xl-2 col-lg-2 wd-rounded-corners wd-follow-dp" src="../../images/java.jpg"/>
@@ -181,7 +178,7 @@
                     <div class="col-xxl-6 col-xl-6 col-lg-6 wd-column-div">
                         <div class="d-flex align-items-center mb-0">
                             <p class="mb-0"><b>Java</b></p>
-                            <i class="fa fa-check-circle mr-3"></i>
+                            <i class="fa fa-check-circle mr-3" style="color: dodgerblue"></i>
                         </div>
                         <div class="d-flex align-items-center mt-0">
                             <p class="mt-0">@Java</p>
@@ -201,7 +198,7 @@
                     <div class="col-xxl-6 col-xl-6 col-lg-6 wd-column-div">
                         <div class="d-flex align-items-center mb-0 d-flex text-wrap">
                             <p class="mb-0"><b>Relativity Space</b></p>
-                            <i class="fa fa-check-circle wd-pos-rel"></i>
+                            <i class="fa fa-check-circle wd-pos-rel" style="color: orange"></i>
                         </div>
                         <div class="d-flex align-items-center mt-0">
                             <p class="mt-0">@relativityspace</p>
@@ -221,7 +218,7 @@
                     <div class="col-xxl-6 col-xl-6 col-lg-6 wd-column-div">
                         <div class="d-flex align-items-center mb-0">
                             <p class="mb-0"><b>Virgin Galactic</b></p>
-                            <i class="fa fa-check-circle mr-3"></i>
+                            <i class="fa fa-check-circle mr-3" style="color: dodgerblue"></i>
                         </div>
                         <div class="d-flex align-items-center mt-0">
                             <p class="mt-0">@virgingalactic</p>
@@ -241,7 +238,7 @@
                     <div class="col-xxl-6 col-xl-6 col-lg-6 wd-column-div">
                         <div class="d-flex align-items-center mb-0">
                             <p class="mb-0"><b>NASA</b></p>
-                            <i class="fa fa-check-circle mr-3"></i>
+                            <i class="fa fa-check-circle mr-3" style="color: orange"></i>
                         </div>
                         <div class="d-flex align-items-center mt-0">
                             <p class="mt-0">@NASA</p>
@@ -261,7 +258,7 @@
                     <div class="col-xxl-6 col-xl-6 col-lg-6 wd-neg-mar-lil wd-column-div">
                         <div class="d-flex align-items-center mb-0">
                             <p class="mb-0"><b>Tesla</b></p>
-                            <i class="fa fa-check-circle mr-3"></i>
+                            <i class="fa fa-check-circle mr-3" style="color: dodgerblue"></i>
                         </div>
                         <div class="d-flex align-items-center mt-0">
                             <p class="mt-0">@Tesla</p>
