--- a/public/tuiter/HomeScreen/home.html
+++ b/public/tuiter/HomeScreen/home.html
@@ -3,16 +3,14 @@
 <head>
     <link href="../../vendors/bootstrap/css/bootstrap.min.css" rel="stylesheet"/>
     <link href="../../vendors/bootswatch/bootstrap.min.css" rel="stylesheet"/>
-    <link href="index.css" rel="stylesheet"/>
+    <link href="../explore/index.css" rel="stylesheet"/>
     <link href="../../vendors/fontawesome/css/all.css" rel="stylesheet"/>
     <meta charset="UTF-8">
-    <!--title>Explore screen</title-->
 </head>
 <body>
-
 <div class="container" id="wd-explore"></div>
-<script src="jquery-3.6.3.min.js"></script>
-<script src="index.js" type="module"></script>
+<script src="../explore/jquery-3.6.3.min.js"></script>
+<script src="home.js" type="module"></script>
 </body>
 </html>
 
