change-made-added-path-name

--- a/public/tuiter/explore/index.html
+++ b/public/tuiter/explore/index.html
@@ -6,7 +6,7 @@
     <link href="index.css" rel="stylesheet"/>
     <link href="../../vendors/fontawesome/css/all.css" rel="stylesheet"/>
     <meta charset="UTF-8">
-    <!--title>Explore screen</title-->
+    <title>Explore screen</title>
 </head>
 <body>
 
